RESOLVED FIXED 256127
REGRESSION(263499@main): [GStreamer] Several webrtc tests timing out
https://bugs.webkit.org/show_bug.cgi?id=256127
Summary REGRESSION(263499@main): [GStreamer] Several webrtc tests timing out
Philippe Normand
Reported 2023-04-29 03:27:53 PDT
Regressions: Unexpected timeouts (5) webrtc/addTransceiver-then-addTrack.html [ Timeout ] webrtc/concurrentVideoPlayback.html [ Timeout ] webrtc/peer-connection-track-end.html [ Timeout ] webrtc/remove-track.html [ Timeout ] webrtc/video-addTrack.html [ Timeout ]
Attachments
Philippe Normand
Comment 1 2023-04-29 05:36:39 PDT
EWS
Comment 2 2023-05-02 04:02:06 PDT
Committed 263581@main (523cb7fde9c6): <https://commits.webkit.org/263581@main> Reviewed commits have been landed. Closing PR #13305 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-05-02 04:03:18 PDT
Note You need to log in before you can comment on or make changes to this bug.