REGRESSION(263499@main): [GStreamer] Several webrtc tests timing out https://bugs.webkit.org/show_bug.cgi?id=256127

Reviewed by Xabier Rodriguez-Calvar.

The timeouts were caused by the playback appsrc forwarding caps queries to the incoming source. Also
the incoming source shouldn't forward stream collection events to the playback appsrc because it is
already handling stream collections itself.

Driving by, the handleDownstreamEvent plumbing is no longer needed now that we know which appsrc is
related to the incoming source appsinks.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/mediastream/RealtimeMediaSource.h:
* Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:
* Source/WebCore/platform/mediastream/gstreamer/RealtimeIncomingSourceGStreamer.cpp:
(WebCore::RealtimeIncomingSourceGStreamer::RealtimeIncomingSourceGStreamer):
(WebCore::RealtimeIncomingSourceGStreamer::registerClient):
(WebCore::RealtimeIncomingSourceGStreamer::handleDownstreamEvent): Deleted.
* Source/WebCore/platform/mediastream/gstreamer/RealtimeIncomingSourceGStreamer.h:
(WebCore::RealtimeIncomingSourceGStreamer::dispatchSample):

Canonical link: https://commits.webkit.org/263581@main